--- a/css/main.css
+++ b/css/main.css
@@ -899,6 +899,10 @@ a.nowrap {
   height: 119px;
   z-index: 9994; }
 
+@media screen and (min-width: 375px) and (max-width: 411px) {
+  .top-banner {
+    background-size: cover; } }
+
 .hero {
   background-image: url(/img/hero_mobile_small.jpg);
   background-repeat: no-repeat;
@@ -908,7 +912,7 @@ a.nowrap {
   margin-top: -20px;
   z-index: 9993; }
 
-@media screen and (min-width: 360px) and (max-width: 374px) {
+@media screen and (min-width: 360px) and (max-width: 375px) {
   .hero {
     background-size: cover; } }
 
